# crewAI-examples

_TEST/: README.md  pyproject.toml
_TEST/src/tachatte/: crew.py  main.py
_TEST2/: README.md  pyproject.toml
_TEST2/src/crew_automation_ia_link_search/: crew.py  main.py
_TEST2/src/crew_automation_ia_link_search/config/: agents.yaml  tasks.yaml
